# hotSpring

./: .cursorignore  .gitignore  CHANGELOG.md  CHUNA_PARITY_STATUS.md  CHUNA_REVIEW.md  CITATION.cff  CONTROL_EXPERIMENT_STATUS.md  Dockerfile  EXPERIMENT_INDEX.md  HANDOFF_HOTSPRING_TO_TOADSTOOL_FEB_12_2026.md  HANDOFF_HOTSPRING_TO_TOADSTOOL_FEB_16_2026.md  NPU_LEVERAGE.md  NPU_STEERING_LESSONS.md  NUCLEAR_EOS_STRATEGY.md  PHYSICS.md  README.md  SOVEREIGN_VALIDATION_GOAL.md  WORKSPACE_MIGRATION_HANDOFF.md  abg.md  domain_profile.toml
barracuda/: ABSORPTION_MANIFEST.md  CHANGELOG.md  Cargo.toml  DEPRECATION_MIGRATION.md  EVOLUTION_READINESS.md  README.md  clippy.toml  deny.toml  rust-toolchain.toml
barracuda/.cargo/: llvm-cov-config.toml  tarpaulin.toml
barracuda/config/: capability_registry.toml
barracuda/cuda/: bench_fp64_ratio.cu
barracuda/docs/: REDUCE_PIPELINE_ANALYSIS.md
barracuda/src/: base64_encode.rs  bench.rs  block_on.rs  composition.rs  compute_dispatch.rs  dag_provenance.rs  data.rs  device_pair.rs  discovery.rs  dual_dispatch.rs  dual_pipeline_eval.rs  ember_types.rs  error.rs  fleet_client.rs  fleet_ember.rs  fleet_toadstool.rs  glowplug_client.rs  gpu.rs  hardware_calibration.rs  lib.rs  mcp_tools.rs  mixed_hardware.rs  niche.rs  nuclear_eos_helpers.rs  pipeline.rs  pipeline_eval.rs  precision_brain.rs  precision_eval.rs  precision_routing.rs  prescreen.rs  primal_bridge.rs  production.rs  production_support.rs  provenance.rs  proxy.rs  receipt_signing.rs  serve.rs  spectral.rs  squirrel_client.rs  stats.rs  (+10 more)
barracuda/src/archive/: nuclear_eos_l1.rs  nuclear_eos_l2.rs  stats.rs  surrogate.rs
barracuda/src/bench/: compute_backend.rs  esn_benchmark.rs  hardware.rs  md_backend.rs  mod.rs  power.rs  report.rs  silicon_profile.rs  silicon_spec_sheets.rs  telemetry.rs
barracuda/src/bin_helpers/: chuna_papers_44_45.rs  mod.rs
barracuda/src/bin_helpers/celllist_diag/: compare_forces.rs  hybrid.rs  mod.rs  phase1b_integrity.rs  phase1c_pair_count.rs
barracuda/src/bin_helpers/chuna_overnight/: harness.rs  mod.rs  paper_44.rs  paper_45.rs  papers.rs
barracuda/src/bin_helpers/coral_sovereign/: basic.rs  f64_ops.rs  mod.rs  prelude.rs  shader_inventory.rs
barracuda/src/bin_helpers/cross_spring/: cpu_misc.rs  cpu_specials.rs  cpu_stats.rs  gpu_linalg.rs  gpu_md.rs  gpu_optimize.rs  gpu_stats.rs  mod.rs  support.rs
barracuda/src/bin_helpers/cross_substrate_esn/: cpu_only.rs  exp1_timing_matrix.rs  exp2_gpu_dispatch.rs  exp3_npu_envelope.rs  exp4_scaling_crossover.rs  exp5_gpu_esn.rs  exp6_qcd_workload.rs  mod.rs  summary.rs
barracuda/src/bin_helpers/k80_gr_sovereign/: ember_mmio.rs  firmware.rs  mod.rs  registers.rs
barracuda/src/bin_helpers/nuclear_eos_gpu/: hetero.rs  l1_semf.rs  l2_hfb.rs  mod.rs  (+1 more)
barracuda/src/certification/: bare.rs  composition_probes.rs  deployment.rs  mod.rs
barracuda/src/compchem/: braid_pipeline.rs  mod.rs
barracuda/src/compute_dispatch/: cross_gate.rs  fused.rs  mod.rs
barracuda/src/glowplug_client/: mod.rs  types.rs
barracuda/src/gpu/: adapter.rs  buffers.rs  dispatch.rs  mod.rs  telemetry.rs
barracuda/src/ipc/: biome_status.rs  ionic_lease.rs  method_register.rs  mod.rs  skunkbat.rs  tier2.rs
barracuda/src/lattice/: abelian_higgs.rs  cg.rs  complex_f64.rs  constants.rs  correlator.rs  dirac.rs  dispatch_adapter.rs  eos_tables.rs  gpu_flow.rs  gpu_hmc.rs  gradient_flow.rs  hmc.rs  ildg.rs  lime.rs  measurement.rs  mod.rs  multi_gpu.rs  process_catalog.rs  pseudofermion.rs  qcdml.rs  rhmc.rs  su3.rs  task_matrix.rs  trio_backend.rs  wilson.rs
barracuda/src/low_level/: bar0.rs  falcon.rs  mod.rs
barracuda/src/md/: brain.rs  celllist.rs  config.rs  cpu_reference.rs  diag.rs  mod.rs  neighbor.rs  npu_hw.rs  observables.rs  reservoir.rs  sarkas_harness.rs  shaders.rs  simulation.rs  simulation_transport_gpu.rs  sovereign_engine.rs  transport.rs  yukawa_nvk_safe.rs
barracuda/src/niche/: mod.rs  tables.rs
barracuda/src/npu_experiments/: mod.rs  placements.rs
barracuda/src/nuclear_eos_helpers/: analysis.rs  display.rs  mod.rs  objectives.rs  persistence.rs  reporting.rs
barracuda/src/physics/: average_atom.rs  bcs_gpu.rs  constants.rs  dielectric.rs  dielectric_multicomponent.rs  fes_gpu.rs  fpeos.rs  gpu_coupled_kinetic_fluid.rs  gpu_dielectric.rs  gpu_dielectric_multicomponent.rs  gpu_euler.rs  gpu_kinetic_fluid.rs  hfb.rs  hfb_common.rs  hfb_deformed.rs  hfb_deformed_common.rs  hfb_deformed_gpu.rs  hfb_gpu.rs  hfb_gpu_resident.rs  hfb_gpu_types.rs  kinetic_fluid.rs  mod.rs  nuclear_matter.rs  screened_coulomb.rs  semf.rs
barracuda/src/prescreen/: cascade.rs  classifier.rs  l1_proxy.rs  mod.rs  nmp.rs  objectives.rs  tests.rs
barracuda/src/production/: beta_scan.rs  bootstrap.rs  checkpoint.rs  cortex_worker.rs  dynamical_bootstrap.rs  dynamical_summary.rs  esn_heuristics.rs  meta_table.rs  mixed_summary.rs  npu_worker.rs  sub_models.rs  titan_validation.rs  titan_worker.rs  trajectory_input.rs  types.rs
barracuda/src/provenance/: analytical.rs  eos.rs  hfb.rs  lattice.rs  mod.rs  nmp.rs  transport.rs  types.rs
barracuda/src/register_maps/: amd_gfx906.rs  mod.rs  nv_gv100.rs
barracuda/src/shaders/: batched_eigh_nak_optimized_f64.wgsl
barracuda/src/spectral/: anderson.rs  csr.rs  hofstadter.rs  lanczos.rs  mod.rs  stats.rs  tridiag.rs
barracuda/src/tolerances/: core.rs  cost.rs  lattice.rs  md.rs  mod.rs  npu.rs  physics.rs
barracuda/src/validation/: composition.rs  harness.rs  mod.rs  telemetry.rs  tests.rs
barracuda/tests/: fleet_integration.rs  integration_data.rs  integration_dielectric.rs  integration_lattice.rs  integration_physics.rs  integration_pipeline.rs  integration_prescreen.rs  integration_proxy.rs  integration_registry_sync.rs  integration_spectral.rs  integration_transport.rs  integration_ttm.rs
control/plumed_nest/nest-validate/: Cargo.toml  README.md
metalForge/forge/: Cargo.toml  deny.toml
metalForge/forge/examples/: inventory.rs
metalForge/forge/src/: biome_graph.rs  bridge.rs  dispatch.rs  inventory.rs  lib.rs  nucleus.rs  pipeline.rs  probe.rs  substrate.rs
(+1754 files in other folders)
